--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,71 +5,179 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Attendance Tracker</title>
   <style>
+    /* General Reset */
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 0;
       padding: 0;
       background-color: #f9f9f9;
-    }
-    h1 {
-      text-align: center;
       color: #333;
     }
-    form {
-      margin-bottom: 20px;
+    header {
+      background-color: #4CAF50;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+    header h1 {
+      margin: 0;
+    }
+    header h2 {
+      margin: 0.5rem 0 0;
+      font-size: 1.2rem;
+    }
+    .container {
+      width: 90%;
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 1.5rem;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
+    }
+    .form-group {
+      margin-bottom: 1rem;
+    }
+    .form-group label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 0.5rem;
+    }
+    .form-group select, .form-group button {
+      width: 100%;
+      padding: 0.8rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .form-group select {
+      background-color: #fff;
+    }
+    .form-group button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .form-group button:hover {
+      background-color: #45a049;
     }
     table {
       width: 100%;
       border-collapse: collapse;
+      margin-top: 2rem;
     }
-    th, td {
-      padding: 10px;
+    table th, table td {
+      padding: 1rem;
+      text-align: left;
       border: 1px solid #ddd;
-      text-align: center;
     }
-    th {
-      background-color: #f4f4f4;
+    table th {
+      background-color: #4CAF50;
+      color: white;
+    }
+    table tr:nth-child(even) {
+      background-color: #f2f2f2;
     }
   </style>
 </head>
 <body>
-  <h1>Attendance Tracker</h1>
-  <form id="attendance-form">
-    <input type="text" id="name" placeholder="Enter Name" required>
-    <input type="date" id="date" required>
-    <select id="status" required>
-      <option value="">Select Status</option>
-      <option value="Present">Present</option>
-      <option value="Absent">Absent</option>
-    </select>
-    <button type="submit">Mark Attendance</button>
-  </form>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Date</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody id="attendance-table">
-    </tbody>
-  </table>
+  <header>
+    <h1>Attendance Tracker</h1>
+    <h2>Nxtlift Marketing Pvt. Ltd.</h2>
+  </header>
+
+  <div class="container">
+    <div class="form-group">
+      <label for="nameDropdown">Select Employee Name:</label>
+      <select id="nameDropdown">
+        <option value="" disabled selected>Select Employee</option>
+        <option value="Akriti">Akriti</option>
+        <option value="Manab">Manab</option>
+        <option value="Pankaj">Pankaj</option>
+        <option value="Harshita">Harshita</option>
+        <option value="Sakib">Sakib</option>
+        <option value="Radha">Radha</option>
+        <option value="Manu">Manu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label for="statusDropdown">Select Status:</label>
+      <select id="statusDropdown">
+        <option value="" disabled selected>Select Status</option>
+        <option value="Present">Present</option>
+        <option value="Absent">Absent</option>
+        <option value="Half Day">Half Day</option>
+        <option value="Week Off">Week Off</option>
+        <option value="Leave">Leave</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <button id="markAttendanceButton">Mark Attendance</button>
+    </div>
+
+    <table id="attendanceTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Date</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Dynamic rows will be inserted here -->
+      </tbody>
+    </table>
+  </div>
+
   <script>
-    const form = document.getElementById('attendance-form');
-    const table = document.getElementById('attendance-table');
+    // Function to format the current date
+    function getCurrentDate() {
+      const today = new Date();
+      const dd = String(today.getDate()).padStart(2, '0');
+      const mm = String(today.getMonth() + 1).padStart(2, '0'); // Months are zero-based
+      const yyyy = today.getFullYear();
+      return `${yyyy}-${mm}-${dd}`;
+    }
 
-    form.addEventListener('submit', (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value;
-      const date = document.getElementById('date').value;
-      const status = document.getElementById('status').value;
+    // Add event listener for the button
+    document.getElementById("markAttendanceButton").addEventListener("click", () => {
+      const name = document.getElementById("nameDropdown").value;
+      const status = document.getElementById("statusDropdown").value;
 
-      const row = document.createElement('tr');
-      row.innerHTML = `<td>${name}</td><td>${date}</td><td>${status}</td>`;
-      table.appendChild(row);
+      if (!name || !status) {
+        alert("Please fill out all fields.");
+        return;
+      }
 
-      form.reset();
+      // Add data to the table dynamically
+      const tableBody = document.getElementById("attendanceTable").querySelector("tbody");
+      const newRow = document.createElement("tr");
+
+      newRow.innerHTML = `
+        <td>${name}</td>
+        <td>${getCurrentDate()}</td>
+        <td>${status}</td>
+      `;
+
+      tableBody.appendChild(newRow);
+
+      // Optionally, send data to Google Sheets (requires backend setup)
+      // Uncomment and replace `YOUR_WEB_APP_URL` with your Google Apps Script URL
+      /*
+      fetch("YOUR_WEB_APP_URL", {
+        method: "POST",
+        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+        body: `name=${encodeURIComponent(name)}&date=${encodeURIComponent(getCurrentDate())}&status=${encodeURIComponent(status)}`
+      })
+        .then(response => response.text())
+        .then(data => console.log(data))
+        .catch(error => console.error("Error:", error));
+      */
+
+      // Clear input fields
+      document.getElementById("nameDropdown").value = "";
+      document.getElementById("statusDropdown").value = "";
     });
   </script>
 </body>
