--- a/index.html
+++ b/index.html
@@ -7,77 +7,117 @@
   <style>
     /* General Reset */
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
+      background: linear-gradient(135deg, #4CAF50, #2E7D32);
+      color: #fff;
+      min-height: 100vh;
     }
+
     header {
-      background-color: #4CAF50;
-      color: white;
       text-align: center;
-      padding: 1rem;
+      padding: 2rem;
+      background-color: rgba(0, 0, 0, 0.2);
     }
+
     header h1 {
       margin: 0;
+      font-size: 2.5rem;
+      font-weight: bold;
     }
+
     header h2 {
       margin: 0.5rem 0 0;
-      font-size: 1.2rem;
+      font-size: 1.5rem;
+      font-weight: lighter;
     }
+
+    .clock {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+      font-weight: bold;
+    }
+
     .container {
       width: 90%;
       max-width: 800px;
       margin: 2rem auto;
-      background: white;
-      padding: 1.5rem;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
+      background: #fff;
+      color: #333;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
     }
+
     .form-group {
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
+
     .form-group label {
       display: block;
+      font-size: 1.1rem;
       font-weight: bold;
       margin-bottom: 0.5rem;
     }
+
     .form-group select, .form-group button {
       width: 100%;
       padding: 0.8rem;
       font-size: 1rem;
       border: 1px solid #ccc;
       border-radius: 5px;
+      transition: box-shadow 0.2s;
     }
+
     .form-group select {
-      background-color: #fff;
+      background: #f9f9f9;
     }
+
     .form-group button {
-      background-color: #4CAF50;
-      color: white;
+      background: linear-gradient(135deg, #4CAF50, #2E7D32);
+      color: #fff;
       border: none;
       cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s, transform 0.2s;
     }
+
     .form-group button:hover {
-      background-color: #45a049;
+      background: #388E3C;
+      transform: translateY(-2px);
     }
+
+    .download-button {
+      margin-top: 1.5rem;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 2rem;
+      background: #f9f9f9;
+      border-radius: 5px;
+      overflow: hidden;
     }
+
     table th, table td {
       padding: 1rem;
       text-align: left;
-      border: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
     }
+
     table th {
-      background-color: #4CAF50;
-      color: white;
+      background: #4CAF50;
+      color: #fff;
     }
-    table tr:nth-child(even) {
-      background-color: #f2f2f2;
+
+    table tr:hover {
+      background: rgba(76, 175, 80, 0.2);
+    }
+
+    table tr:last-child td {
+      border-bottom: none;
     }
   </style>
 </head>
@@ -85,6 +125,7 @@
   <header>
     <h1>Attendance Tracker</h1>
     <h2>Nxtlift Marketing Pvt. Ltd.</h2>
+    <div class="clock" id="clock"></div>
   </header>
 
   <div class="container">
@@ -115,6 +156,9 @@
     <div class="form-group">
       <button id="markAttendanceButton">Mark Attendance</button>
     </div>
+    <div class="form-group download-button">
+      <button id="downloadReportButton">Download Report</button>
+    </div>
 
     <table id="attendanceTable">
       <thead>
@@ -131,53 +175,65 @@
   </div>
 
   <script>
-    // Function to format the current date
+    // Function to update the clock in real time
+    function updateClock() {
+      const now = new Date();
+      const hours = String(now.getHours()).padStart(2, '0');
+      const minutes = String(now.getMinutes()).padStart(2, '0');
+      const seconds = String(now.getSeconds()).padStart(2, '0');
+      document.getElementById('clock').innerText = `Current Time: ${hours}:${minutes}:${seconds}`;
+    }
+    setInterval(updateClock, 1000);
+
+    // Function to get the current date
     function getCurrentDate() {
       const today = new Date();
       const dd = String(today.getDate()).padStart(2, '0');
-      const mm = String(today.getMonth() + 1).padStart(2, '0'); // Months are zero-based
+      const mm = String(today.getMonth() + 1).padStart(2, '0');
       const yyyy = today.getFullYear();
       return `${yyyy}-${mm}-${dd}`;
     }
 
-    // Add event listener for the button
-    document.getElementById("markAttendanceButton").addEventListener("click", () => {
-      const name = document.getElementById("nameDropdown").value;
-      const status = document.getElementById("statusDropdown").value;
+    // Mark Attendance
+    document.getElementById('markAttendanceButton').addEventListener('click', () => {
+      const name = document.getElementById('nameDropdown').value;
+      const status = document.getElementById('statusDropdown').value;
 
       if (!name || !status) {
-        alert("Please fill out all fields.");
+        alert('Please fill out all fields.');
         return;
       }
 
-      // Add data to the table dynamically
-      const tableBody = document.getElementById("attendanceTable").querySelector("tbody");
-      const newRow = document.createElement("tr");
-
-      newRow.innerHTML = `
-        <td>${name}</td>
-        <td>${getCurrentDate()}</td>
-        <td>${status}</td>
-      `;
-
+      const tableBody = document.getElementById('attendanceTable').querySelector('tbody');
+      const newRow = document.createElement('tr');
+      newRow.innerHTML = `<td>${name}</td><td>${getCurrentDate()}</td><td>${status}</td>`;
       tableBody.appendChild(newRow);
 
-      // Optionally, send data to Google Sheets (requires backend setup)
-      // Uncomment and replace `YOUR_WEB_APP_URL` with your Google Apps Script URL
-      /*
-      fetch("YOUR_WEB_APP_URL", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: `name=${encodeURIComponent(name)}&date=${encodeURIComponent(getCurrentDate())}&status=${encodeURIComponent(status)}`
-      })
-        .then(response => response.text())
-        .then(data => console.log(data))
-        .catch(error => console.error("Error:", error));
-      */
+      document.getElementById('nameDropdown').value = '';
+      document.getElementById('statusDropdown').value = '';
+    });
 
-      // Clear input fields
-      document.getElementById("nameDropdown").value = "";
-      document.getElementById("statusDropdown").value = "";
+    // Download Report
+    document.getElementById('downloadReportButton').addEventListener('click', () => {
+      const rows = document.querySelectorAll('#attendanceTable tbody tr');
+      if (rows.length === 0) {
+        alert('No records to download.');
+        return;
+      }
+
+      let csv = 'Name,Date,Status\n';
+      rows.forEach(row => {
+        const cells = row.querySelectorAll('td');
+        const rowData = Array.from(cells).map(cell => cell.textContent).join(',');
+        csv += `${rowData}\n`;
+      });
+
+      const blob = new Blob([csv], { type: 'text/csv' });
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(blob);
+      link.download = `Attendance_${getCurrentDate()}.csv`;
+      link.click();
+      URL.revokeObjectURL(link.href);
     });
   </script>
 </body>
