--- a/index.html
+++ b/index.html
@@ -4,237 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Attendance Tracker</title>
-  <style>
-    /* General Reset */
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #4CAF50, #2E7D32);
-      color: #fff;
-      min-height: 100vh;
-    }
-
-    header {
-      text-align: center;
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.2);
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-
-    header h2 {
-      margin: 0.5rem 0 0;
-      font-size: 1.5rem;
-      font-weight: lighter;
-    }
-
-    .clock {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-      font-weight: bold;
-    }
-
-    .container {
-      width: 90%;
-      max-width: 800px;
-      margin: 2rem auto;
-      background: #fff;
-      color: #333;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    }
-
-    .form-group {
-      margin-bottom: 1.5rem;
-    }
-
-    .form-group label {
-      display: block;
-      font-size: 1.1rem;
-      font-weight: bold;
-      margin-bottom: 0.5rem;
-    }
-
-    .form-group select, .form-group button {
-      width: 100%;
-      padding: 0.8rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      transition: box-shadow 0.2s;
-    }
-
-    .form-group select {
-      background: #f9f9f9;
-    }
-
-    .form-group button {
-      background: linear-gradient(135deg, #4CAF50, #2E7D32);
-      color: #fff;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-      transition: background 0.3s, transform 0.2s;
-    }
-
-    .form-group button:hover {
-      background: #388E3C;
-      transform: translateY(-2px);
-    }
-
-    .download-button {
-      margin-top: 1.5rem;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 2rem;
-      background: #f9f9f9;
-      border-radius: 5px;
-      overflow: hidden;
-    }
-
-    table th, table td {
-      padding: 1rem;
-      text-align: left;
-      border-bottom: 1px solid #ddd;
-    }
-
-    table th {
-      background: #4CAF50;
-      color: #fff;
-    }
-
-    table tr:hover {
-      background: rgba(76, 175, 80, 0.2);
-    }
-
-    table tr:last-child td {
-      border-bottom: none;
-    }
-  </style>
 </head>
 <body>
-  <header>
-    <h1>Attendance Tracker</h1>
-    <h2>Nxtlift Marketing Pvt. Ltd.</h2>
-    <div class="clock" id="clock"></div>
-  </header>
+  <h1>Welcome to Attendance Tracker</h1>
+  <p>Your Firebase integration is set up!</p>
 
-  <div class="container">
-    <div class="form-group">
-      <label for="nameDropdown">Select Employee Name:</label>
-      <select id="nameDropdown">
-        <option value="" disabled selected>Select Employee</option>
-        <option value="Akriti">Akriti</option>
-        <option value="Manab">Manab</option>
-        <option value="Pankaj">Pankaj</option>
-        <option value="Harshita">Harshita</option>
-        <option value="Sakib">Sakib</option>
-        <option value="Radha">Radha</option>
-        <option value="Manu">Manu</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label for="statusDropdown">Select Status:</label>
-      <select id="statusDropdown">
-        <option value="" disabled selected>Select Status</option>
-        <option value="Present">Present</option>
-        <option value="Absent">Absent</option>
-        <option value="Half Day">Half Day</option>
-        <option value="Week Off">Week Off</option>
-        <option value="Leave">Leave</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <button id="markAttendanceButton">Mark Attendance</button>
-    </div>
-    <div class="form-group download-button">
-      <button id="downloadReportButton">Download Report</button>
-    </div>
+  <!-- Add your content and scripts here -->
 
-    <table id="attendanceTable">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Date</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Dynamic rows will be inserted here -->
-      </tbody>
-    </table>
-  </div>
+  <!-- Firebase Integration -->
+  <script type="module">
+    // Import Firebase libraries
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-analytics.js";
 
-  <script>
-    // Function to update the clock in real time
-    function updateClock() {
-      const now = new Date();
-      const hours = String(now.getHours()).padStart(2, '0');
-      const minutes = String(now.getMinutes()).padStart(2, '0');
-      const seconds = String(now.getSeconds()).padStart(2, '0');
-      document.getElementById('clock').innerText = `Current Time: ${hours}:${minutes}:${seconds}`;
-    }
-    setInterval(updateClock, 1000);
+    // Your Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBC5zhxoa3YY3520AohWzopvc",
+      authDomain: "attendance-tracker-51b70.firebaseapp.com",
+      projectId: "attendance-tracker-51b70",
+      storageBucket: "attendance-tracker-51b70.appspot.com",
+      messagingSenderId: "976773468129",
+      appId: "1:976773468129:web:cfba44de917c",
+      measurementId: "G-S41Y30WX8P"
+    };
 
-    // Function to get the current date
-    function getCurrentDate() {
-      const today = new Date();
-      const dd = String(today.getDate()).padStart(2, '0');
-      const mm = String(today.getMonth() + 1).padStart(2, '0');
-      const yyyy = today.getFullYear();
-      return `${yyyy}-${mm}-${dd}`;
-    }
-
-    // Mark Attendance
-    document.getElementById('markAttendanceButton').addEventListener('click', () => {
-      const name = document.getElementById('nameDropdown').value;
-      const status = document.getElementById('statusDropdown').value;
-
-      if (!name || !status) {
-        alert('Please fill out all fields.');
-        return;
-      }
-
-      const tableBody = document.getElementById('attendanceTable').querySelector('tbody');
-      const newRow = document.createElement('tr');
-      newRow.innerHTML = `<td>${name}</td><td>${getCurrentDate()}</td><td>${status}</td>`;
-      tableBody.appendChild(newRow);
-
-      document.getElementById('nameDropdown').value = '';
-      document.getElementById('statusDropdown').value = '';
-    });
-
-    // Download Report
-    document.getElementById('downloadReportButton').addEventListener('click', () => {
-      const rows = document.querySelectorAll('#attendanceTable tbody tr');
-      if (rows.length === 0) {
-        alert('No records to download.');
-        return;
-      }
-
-      let csv = 'Name,Date,Status\n';
-      rows.forEach(row => {
-        const cells = row.querySelectorAll('td');
-        const rowData = Array.from(cells).map(cell => cell.textContent).join(',');
-        csv += `${rowData}\n`;
-      });
-
-      const blob = new Blob([csv], { type: 'text/csv' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = `Attendance_${getCurrentDate()}.csv`;
-      link.click();
-      URL.revokeObjectURL(link.href);
-    });
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    console.log('Firebase initialized successfully');
   </script>
 </body>
 </html>
