--- a/index.html
+++ b/index.html
@@ -9,59 +9,68 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            background-image: url('background.jpg'); /* Add your background image */
+            background-image: url('https://images.unsplash.com/photo-1517807174495-1af7dc85fc63?fit=crop&w=1500&q=80');
             background-size: cover;
             background-position: center;
+            background-repeat: no-repeat;
+            color: #333;
         }
+
         header {
-            background: rgba(0, 123, 255, 0.8);
-            color: white;
-            padding: 1rem;
-            text-align: center;
-            position: relative;
+            background-color: rgba(0, 123, 255, 0.8);
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
+
         header img {
-            position: absolute;
-            left: 10px;
-            top: 10px;
             height: 50px;
         }
-        main {
-            padding: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100vh - 80px);
+
+        header h1 {
+            color: #fff;
+            margin: 0;
         }
-        form {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 1.5rem;
-            border-radius: 8px;
+
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.9);
+            border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px;
         }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
         label {
-            display: block;
-            margin-bottom: 0.5rem;
             font-weight: bold;
+            display: block;
+            margin-bottom: 5px;
         }
-        select,
-        input[type="date"],
+
+        select, input[type="date"] {
+            width: 100%;
+            padding: 8px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
         button {
             width: 100%;
-            padding: 0.75rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        button {
+            padding: 10px;
             background-color: #007bff;
             color: white;
             border: none;
+            border-radius: 5px;
+            font-size: 16px;
             cursor: pointer;
         }
+
         button:hover {
             background-color: #0056b3;
         }
@@ -69,44 +78,33 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Company Logo"> <!-- Add your logo image -->
+        <img src="https://pankajbossgu.github.io/attendance-wbsite/logo.png" alt="Company Logo">
         <h1>Attendance Tracker</h1>
     </header>
-    <main>
+    <div class="container">
         <form>
-            <label for="attendance-date">Select Date:</label>
-            <input type="date" id="attendance-date" name="date">
-
-            <label for="employee-name">Select Employee Name:</label>
-            <select id="employee-name" name="employee-name">
-                <option value="">Select Employee</option>
-                <option value="Akriti">Akriti</option>
-                <option value="Manab">Manab</option>
-                <option value="Pankaj">Pankaj</option>
-                <option value="Harshita">Harshita</option>
-                <option value="Sakib">Sakib</option>
-                <option value="Radha">Radha</option>
-                <option value="Manu">Manu</option>
-            </select>
-
-            <label for="attendance-status">Select Status:</label>
-            <select id="attendance-status" name="attendance-status">
-                <option value="">Select Status</option>
-                <option value="Present">Present</option>
-                <option value="Absent">Absent</option>
-                <option value="Half Day">Half Day</option>
-                <option value="Week Off">Week Off</option>
-                <option value="Leave">Leave</option>
-            </select>
-
+            <div class="form-group">
+                <label for="date">Select Date:</label>
+                <input type="date" id="date" name="date" value="">
+            </div>
+            <div class="form-group">
+                <label for="employee">Select Employee Name:</label>
+                <select id="employee" name="employee">
+                    <option>Select Employee</option>
+                    <option>John Doe</option>
+                    <option>Jane Smith</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="status">Select Status:</label>
+                <select id="status" name="status">
+                    <option>Select Status</option>
+                    <option>Present</option>
+                    <option>Absent</option>
+                </select>
+            </div>
             <button type="submit">Mark Attendance</button>
         </form>
-    </main>
-
-    <script>
-        // Set today's date as default
-        const today = new Date().toISOString().split('T')[0];
-        document.getElementById('attendance-date').value = today;
-    </script>
+    </div>
 </body>
 </html>
