--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header>
-        <img src="https://pankajbossgu.github.io/attendance-wbsite/A_minimalist_and_professional_company_logo_featuri.png" alt="Company Logo">
+        <img src="https://via.placeholder.com/150?text=Company+Logo" alt="Company Logo">
         <h1>Attendance Tracker</h1>
     </header>
     <div class="container">
