--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 </head>
 <body>
     <header>
-        <img src="https://via.placeholder.com/150?text=Company+Logo" alt="Company Logo">
+        <!-- Updated logo URL -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2022.svg" alt="Company Logo">
         <h1>Attendance Tracker</h1>
     </header>
     <div class="container">
