--- a/index.html
+++ b/index.html
@@ -3,38 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance Tracker</title>
+    <title>Advanced Attendance Tracker</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        /* General Styling */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://images.unsplash.com/photo-1517807174495-1af7dc85fc63?fit=crop&w=1500&q=80');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background: linear-gradient(to bottom, #f0f8ff, #d3e0ea);
             color: #333;
         }
 
+        /* Navbar */
+        nav {
+            position: sticky;
+            top: 0;
+            background-color: #007bff;
+            padding: 10px 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            color: #fff;
+            z-index: 1000;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .dark-mode-toggle {
+            cursor: pointer;
+        }
+
+        /* Header */
         header {
-            background-color: rgba(0, 123, 255, 0.8);
-            padding: 10px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
+            padding: 20px;
+            background-color: #0056b3;
+            color: white;
         }
 
         header img {
-            height: 50px;
+            height: 60px;
+            margin-right: 15px;
         }
 
-        header h1 {
-            color: #fff;
-            margin: 0;
-        }
-
+        /* Main Container */
         .container {
-            max-width: 600px;
+            max-width: 700px;
             margin: 50px auto;
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.9);
@@ -43,7 +70,7 @@
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         label {
@@ -54,7 +81,7 @@
 
         select, input[type="date"] {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             font-size: 16px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -62,44 +89,94 @@
 
         button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 18px;
             cursor: pointer;
         }
 
         button:hover {
             background-color: #0056b3;
         }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #0056b3;
+            color: white;
+        }
+
+        footer a {
+            color: white;
+            margin: 0 10px;
+        }
+
+        footer a:hover {
+            color: #ffeb3b;
+        }
+
+        /* Dark Mode */
+        body.dark-mode {
+            background: linear-gradient(to bottom, #121212, #333);
+            color: #f0f0f0;
+        }
+
+        body.dark-mode nav {
+            background-color: #444;
+        }
+
+        body.dark-mode header {
+            background-color: #222;
+        }
+
+        body.dark-mode footer {
+            background-color: #222;
+        }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav>
+        <div>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Attendance</a>
+        </div>
+        <div class="dark-mode-toggle">
+            <i class="fas fa-moon"></i>
+        </div>
+    </nav>
+
+    <!-- Header -->
     <header>
-        <!-- Updated logo URL -->
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2022.svg" alt="Company Logo">
         <h1>Attendance Tracker</h1>
     </header>
+
+    <!-- Main Form -->
     <div class="container">
         <form>
             <div class="form-group">
                 <label for="date">Select Date:</label>
-                <input type="date" id="date" name="date" value="">
+                <input type="date" id="date" name="date">
             </div>
             <div class="form-group">
                 <label for="employee">Select Employee Name:</label>
                 <select id="employee" name="employee">
-                    <option>Select Employee</option>
+                    <option value="">Select Employee</option>
                     <option>John Doe</option>
                     <option>Jane Smith</option>
+                    <option>Emily Johnson</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="status">Select Status:</label>
                 <select id="status" name="status">
-                    <option>Select Status</option>
+                    <option value="">Select Status</option>
                     <option>Present</option>
                     <option>Absent</option>
                 </select>
@@ -107,5 +184,25 @@
             <button type="submit">Mark Attendance</button>
         </form>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>Follow us on:</p>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <p>&copy; 2025 Attendance Tracker, Inc.</p>
+    </footer>
+
+    <!-- Dark Mode Script -->
+    <script>
+        const toggle = document.querySelector('.dark-mode-toggle');
+        toggle.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            const icon = toggle.querySelector('i');
+            icon.classList.toggle('fa-moon');
+            icon.classList.toggle('fa-sun');
+        });
+    </script>
 </body>
 </html>
