--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Attendance Tracker</title>
+    <title>Attendance Tracker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         /* General Styling */
@@ -11,7 +11,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to bottom, #f0f8ff, #d3e0ea);
+            background: #f4f7f6;
             color: #333;
         }
 
@@ -64,7 +64,7 @@
             max-width: 700px;
             margin: 50px auto;
             padding: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -121,7 +121,7 @@
 
         /* Dark Mode */
         body.dark-mode {
-            background: linear-gradient(to bottom, #121212, #333);
+            background: #121212;
             color: #f0f0f0;
         }
 
@@ -168,9 +168,14 @@
                 <label for="employee">Select Employee Name:</label>
                 <select id="employee" name="employee">
                     <option value="">Select Employee</option>
-                    <option>John Doe</option>
-                    <option>Jane Smith</option>
-                    <option>Emily Johnson</option>
+                    <!-- Employee Names -->
+                    <option value="Pankaj">Pankaj</option>
+                    <option value="Akriti">Akriti</option>
+                    <option value="Manab">Manab</option>
+                    <option value="Harshita">Harshita</option>
+                    <option value="Sakib">Sakib</option>
+                    <option value="Manu">Manu</option>
+                    <option value="Radha">Radha</option>
                 </select>
             </div>
             <div class="form-group">
