--- a/index.html
+++ b/index.html
@@ -1,65 +1,63 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nxtlift Marketing Pvt. Ltd. - Attendance Tracker</title>
+  <title>Nxtlift Marketing Pvt. Ltd.</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.css">
 </head>
 <body>
-  <header>
-    <div class="container">
+  <header class="header">
+    <div class="logo animate__animated animate__fadeInDown">
       <h1>Nxtlift Marketing Pvt. Ltd.</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
     </div>
+    <nav class="navbar">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <main>
-    <section class="attendance-form">
-      <h2>Attendance Tracker</h2>
-      <form>
+  <section id="attendance" class="attendance-container" data-aos="fade-up">
+    <h2 class="section-title">Attendance Tracker</h2>
+    <form class="attendance-form">
+      <div class="form-group" data-aos="zoom-in">
         <label for="date">Select Date:</label>
-        <input type="date" id="date" name="date">
-
-        <label for="employee">Select Employee Name:</label>
-        <select id="employee" name="employee">
-          <option value="Pankaj">Pankaj</option>
-          <option value="Akriti">Akriti</option>
-          <option value="Manab">Manab</option>
-          <option value="Harshita">Harshita</option>
-          <option value="Sakib">Sakib</option>
-          <option value="Manu">Manu</option>
-          <option value="Radha">Radha</option>
+        <input type="date" id="date" name="date" required>
+      </div>
+      <div class="form-group" data-aos="zoom-in">
+        <label for="employee-name">Select Employee Name:</label>
+        <select id="employee-name" name="employee-name">
+          <option>Pankaj</option>
+          <option>Rahul</option>
+          <option>Anjali</option>
         </select>
-
+      </div>
+      <div class="form-group" data-aos="zoom-in">
         <label for="status">Select Status:</label>
         <select id="status" name="status">
-          <option value="Present">Present</option>
-          <option value="Absent">Absent</option>
-          <option value="On Leave">On Leave</option>
+          <option>Present</option>
+          <option>Absent</option>
         </select>
+      </div>
+      <button type="submit" class="btn" data-aos="zoom-in">Mark Attendance</button>
+    </form>
+  </section>
 
-        <button type="submit">Mark Attendance</button>
-      </form>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 Nxtlift Marketing Pvt. Ltd. All rights reserved.</p>
-    <div class="social-icons">
-      <a href="#">Twitter</a>
-      <a href="#">Facebook</a>
-      <a href="#">LinkedIn</a>
+  <footer class="footer">
+    <p>&copy; 2025 Nxtlift Marketing Pvt. Ltd. All rights reserved.</p>
+    <div class="social-links">
+      <a href="#twitter">Twitter</a>
+      <a href="#facebook">Facebook</a>
+      <a href="#linkedin">LinkedIn</a>
     </div>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
